--- a/PRETRACTAMENT/METEO_preprocessing_1.ipynb
+++ b/PRETRACTAMENT/METEO_preprocessing_1.ipynb
@@ -307,6 +307,451 @@
    "source": [
     "first_df.to_csv(\"../DATASETS_TRACTATS/df_meteo_tractat.csv\", index = False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "0f525573",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>validTimeUtc</th>\n",
+       "      <th>ID_ESTACION</th>\n",
+       "      <th>precip1HourDayAvg</th>\n",
+       "      <th>pressureChangeDayAvg</th>\n",
+       "      <th>relativeHumidityDayAvg</th>\n",
+       "      <th>snow1HourDayAvg</th>\n",
+       "      <th>temperatureDayAvg</th>\n",
+       "      <th>temperatureDewPointDayAvg</th>\n",
+       "      <th>temperatureFeelsLikeDayAvg</th>\n",
+       "      <th>windSpeedDayAvg</th>\n",
+       "      <th>...</th>\n",
+       "      <th>temperatureFeelsLikeOvernightMax</th>\n",
+       "      <th>windSpeedOvernightMax</th>\n",
+       "      <th>precip1HourOvernightMin</th>\n",
+       "      <th>pressureChangeOvernightMin</th>\n",
+       "      <th>relativeHumidityOvernightMin</th>\n",
+       "      <th>snow1HourOvernightMin</th>\n",
+       "      <th>temperatureOvernightMin</th>\n",
+       "      <th>temperatureDewPointOvernightMin</th>\n",
+       "      <th>temperatureFeelsLikeOvernightMin</th>\n",
+       "      <th>windSpeedOvernightMin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2015-06-30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.321739</td>\n",
+       "      <td>44.700000</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.534783</td>\n",
+       "      <td>12.095652</td>\n",
+       "      <td>26.565217</td>\n",
+       "      <td>11.073913</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35.7</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.5</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18.3</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>18.3</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2015-06-30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.308696</td>\n",
+       "      <td>38.773913</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.834783</td>\n",
+       "      <td>10.226087</td>\n",
+       "      <td>26.834783</td>\n",
+       "      <td>12.986957</td>\n",
+       "      <td>...</td>\n",
+       "      <td>35.5</td>\n",
+       "      <td>22.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.2</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18.3</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>18.3</td>\n",
+       "      <td>4.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2015-06-30</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.330435</td>\n",
+       "      <td>44.865217</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.821739</td>\n",
+       "      <td>12.252174</td>\n",
+       "      <td>26.839130</td>\n",
+       "      <td>11.213043</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36.2</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>17.5</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2015-06-30</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.321739</td>\n",
+       "      <td>41.652174</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>27.213043</td>\n",
+       "      <td>11.456522</td>\n",
+       "      <td>27.213043</td>\n",
+       "      <td>12.278261</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36.3</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.3</td>\n",
+       "      <td>19.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>4.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2015-06-30</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.308696</td>\n",
+       "      <td>40.960870</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>26.852174</td>\n",
+       "      <td>10.904348</td>\n",
+       "      <td>26.865217</td>\n",
+       "      <td>12.808696</td>\n",
+       "      <td>...</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.2</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18.1</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>18.1</td>\n",
+       "      <td>4.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51155</th>\n",
+       "      <td>2022-06-30</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.230435</td>\n",
+       "      <td>53.113043</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>23.769565</td>\n",
+       "      <td>12.200000</td>\n",
+       "      <td>23.791304</td>\n",
+       "      <td>7.717391</td>\n",
+       "      <td>...</td>\n",
+       "      <td>31.5</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.4</td>\n",
+       "      <td>25.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>8.3</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51156</th>\n",
+       "      <td>2022-06-30</td>\n",
+       "      <td>16</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.239130</td>\n",
+       "      <td>52.556522</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.182609</td>\n",
+       "      <td>12.626087</td>\n",
+       "      <td>24.200000</td>\n",
+       "      <td>6.852174</td>\n",
+       "      <td>...</td>\n",
+       "      <td>31.4</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.2</td>\n",
+       "      <td>25.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51157</th>\n",
+       "      <td>2022-06-30</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.226087</td>\n",
+       "      <td>48.439130</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>23.582609</td>\n",
+       "      <td>10.091304</td>\n",
+       "      <td>23.586957</td>\n",
+       "      <td>8.382609</td>\n",
+       "      <td>...</td>\n",
+       "      <td>31.5</td>\n",
+       "      <td>16.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.7</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>4.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51158</th>\n",
+       "      <td>2022-06-30</td>\n",
+       "      <td>18</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.304348</td>\n",
+       "      <td>52.656522</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.195652</td>\n",
+       "      <td>13.030435</td>\n",
+       "      <td>24.239130</td>\n",
+       "      <td>6.669565</td>\n",
+       "      <td>...</td>\n",
+       "      <td>31.1</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.4</td>\n",
+       "      <td>30.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>4.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51159</th>\n",
+       "      <td>2022-06-30</td>\n",
+       "      <td>19</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.260870</td>\n",
+       "      <td>53.482609</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24.969565</td>\n",
+       "      <td>13.686957</td>\n",
+       "      <td>25.047826</td>\n",
+       "      <td>6.773913</td>\n",
+       "      <td>...</td>\n",
+       "      <td>32.3</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-1.3</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.3</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>20.3</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>51160 rows × 170 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      validTimeUtc  ID_ESTACION  precip1HourDayAvg  pressureChangeDayAvg  \\\n",
+       "0       2015-06-30            0                0.0             -0.321739   \n",
+       "1       2015-06-30            1                0.0             -0.308696   \n",
+       "2       2015-06-30            2                0.0             -0.330435   \n",
+       "3       2015-06-30            3                0.0             -0.321739   \n",
+       "4       2015-06-30            4                0.0             -0.308696   \n",
+       "...            ...          ...                ...                   ...   \n",
+       "51155   2022-06-30           15                0.0              0.230435   \n",
+       "51156   2022-06-30           16                0.0              0.239130   \n",
+       "51157   2022-06-30           17                0.0              0.226087   \n",
+       "51158   2022-06-30           18                0.0              0.304348   \n",
+       "51159   2022-06-30           19                0.0              0.260870   \n",
+       "\n",
+       "       relativeHumidityDayAvg  snow1HourDayAvg  temperatureDayAvg  \\\n",
+       "0                   44.700000              0.0          26.534783   \n",
+       "1                   38.773913              0.0          26.834783   \n",
+       "2                   44.865217              0.0          26.821739   \n",
+       "3                   41.652174              0.0          27.213043   \n",
+       "4                   40.960870              0.0          26.852174   \n",
+       "...                       ...              ...                ...   \n",
+       "51155               53.113043              0.0          23.769565   \n",
+       "51156               52.556522              0.0          24.182609   \n",
+       "51157               48.439130              0.0          23.582609   \n",
+       "51158               52.656522              0.0          24.195652   \n",
+       "51159               53.482609              0.0          24.969565   \n",
+       "\n",
+       "       temperatureDewPointDayAvg  temperatureFeelsLikeDayAvg  windSpeedDayAvg  \\\n",
+       "0                      12.095652                   26.565217        11.073913   \n",
+       "1                      10.226087                   26.834783        12.986957   \n",
+       "2                      12.252174                   26.839130        11.213043   \n",
+       "3                      11.456522                   27.213043        12.278261   \n",
+       "4                      10.904348                   26.865217        12.808696   \n",
+       "...                          ...                         ...              ...   \n",
+       "51155                  12.200000                   23.791304         7.717391   \n",
+       "51156                  12.626087                   24.200000         6.852174   \n",
+       "51157                  10.091304                   23.586957         8.382609   \n",
+       "51158                  13.030435                   24.239130         6.669565   \n",
+       "51159                  13.686957                   25.047826         6.773913   \n",
+       "\n",
+       "       ...  temperatureFeelsLikeOvernightMax  windSpeedOvernightMax  \\\n",
+       "0      ...                              35.7                   20.2   \n",
+       "1      ...                              35.5                   22.3   \n",
+       "2      ...                              36.2                   20.5   \n",
+       "3      ...                              36.3                   21.6   \n",
+       "4      ...                              36.0                   22.0   \n",
+       "...    ...                               ...                    ...   \n",
+       "51155  ...                              31.5                   14.8   \n",
+       "51156  ...                              31.4                   13.3   \n",
+       "51157  ...                              31.5                   16.2   \n",
+       "51158  ...                              31.1                   10.4   \n",
+       "51159  ...                              32.3                   11.2   \n",
+       "\n",
+       "       precip1HourOvernightMin  pressureChangeOvernightMin  \\\n",
+       "0                          0.0                        -1.5   \n",
+       "1                          0.0                        -1.2   \n",
+       "2                          0.0                        -1.0   \n",
+       "3                          0.0                        -1.3   \n",
+       "4                          0.0                        -1.2   \n",
+       "...                        ...                         ...   \n",
+       "51155                      0.0                        -1.4   \n",
+       "51156                      0.0                        -1.2   \n",
+       "51157                      0.0                        -1.7   \n",
+       "51158                      0.0                        -1.4   \n",
+       "51159                      0.0                        -1.3   \n",
+       "\n",
+       "       relativeHumidityOvernightMin  snow1HourOvernightMin  \\\n",
+       "0                              21.6                    0.0   \n",
+       "1                              19.3                    0.0   \n",
+       "2                              21.6                    0.0   \n",
+       "3                              19.7                    0.0   \n",
+       "4                              20.0                    0.0   \n",
+       "...                             ...                    ...   \n",
+       "51155                          25.7                    0.0   \n",
+       "51156                          25.9                    0.0   \n",
+       "51157                          21.3                    0.0   \n",
+       "51158                          30.2                    0.0   \n",
+       "51159                          28.0                    0.0   \n",
+       "\n",
+       "       temperatureOvernightMin  temperatureDewPointOvernightMin  \\\n",
+       "0                         18.3                             10.4   \n",
+       "1                         18.3                              8.6   \n",
+       "2                         17.5                             10.5   \n",
+       "3                         18.5                              9.5   \n",
+       "4                         18.1                              9.5   \n",
+       "...                        ...                              ...   \n",
+       "51155                     18.7                              8.3   \n",
+       "51156                     19.6                              8.9   \n",
+       "51157                     17.9                              5.3   \n",
+       "51158                     19.5                             10.7   \n",
+       "51159                     20.3                             10.5   \n",
+       "\n",
+       "       temperatureFeelsLikeOvernightMin  windSpeedOvernightMin  \n",
+       "0                                  18.3                    3.6  \n",
+       "1                                  18.3                    4.7  \n",
+       "2                                  17.5                    3.6  \n",
+       "3                                  18.5                    4.7  \n",
+       "4                                  18.1                    4.7  \n",
+       "...                                 ...                    ...  \n",
+       "51155                              18.7                    3.6  \n",
+       "51156                              19.6                    2.5  \n",
+       "51157                              17.9                    4.7  \n",
+       "51158                              19.5                    4.3  \n",
+       "51159                              20.3                    3.6  \n",
+       "\n",
+       "[51160 rows x 170 columns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b5e8b56",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
