--- a/PRETRACTAMENT/TRAIN_PREPROCESSING_4.ipynb
+++ b/PRETRACTAMENT/TRAIN_PREPROCESSING_4.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "208a3475",
    "metadata": {},
    "outputs": [],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "bab1a401",
    "metadata": {},
    "outputs": [
@@ -333,7 +333,7 @@
        "Name: ALTITUD, Length: 9547, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f16696a8",
    "metadata": {},
    "outputs": [],
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "c9a405d0",
    "metadata": {},
    "outputs": [],
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "d94383d7",
    "metadata": {},
    "outputs": [],
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "1a672466",
    "metadata": {},
    "outputs": [
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "7895d106",
    "metadata": {},
    "outputs": [],
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "2ccdb4a8",
    "metadata": {},
    "outputs": [],
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "e1ec0837",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "id": "84565482",
    "metadata": {},
    "outputs": [
@@ -696,7 +696,7 @@
        "[9601 rows x 11 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "247f7d7f",
    "metadata": {},
    "outputs": [],
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "29c97c45",
    "metadata": {},
    "outputs": [],
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "cb681223",
    "metadata": {},
    "outputs": [
@@ -956,7 +956,7 @@
        "[9601 rows x 11 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "b420ed41",
    "metadata": {},
    "outputs": [],
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "583753b5",
    "metadata": {},
    "outputs": [],
@@ -1006,7 +1006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "50ebdb4a",
    "metadata": {},
    "outputs": [],
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 103,
    "id": "60e42567",
    "metadata": {},
    "outputs": [],
@@ -1085,15 +1085,81 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c8fa5c2",
+   "id": "6f855579",
    "metadata": {},
    "source": [
-    "#### Cas 1"
+    "#### 20-21 dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 70,
+   "id": "763323d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new_20_21 = df_new[df_new[\"CAMPAÑA\"].isin([\"20\", \"21\"]) == True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "b2430e7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new_20_21 = df_new_20_21[df_new_20_21[\"SUPERFICIE\"] != 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "511cd835",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new_20_21.to_csv(\"../DATASETS_FINALS/TOT_20_21.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8fa458c",
+   "metadata": {},
+   "source": [
+    "#### 14 i 22 dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "b832af3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new_14_22 = df_new[df_new[\"CAMPAÑA\"].isin([\"14\", \"22\"]) == True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "bf0d8686",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new_14_22.to_csv(\"../DATASETS_FINALS/TOT_14_22.csv\", index_label = \"INDEX\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc336e98",
+   "metadata": {},
+   "source": [
+    "#### Intersections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
    "id": "9aa1d3e8",
    "metadata": {},
    "outputs": [],
@@ -1112,7 +1178,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
+   "id": "840fc4ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#FINCA 13450 apareix l'any 14\n",
+    "df_new5[df_new5[\"ID_FINCA\"].isin(id_finca) == True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28835354",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_new5[df_new5[\"ID_ZONA\"].isin(id_zona) == True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9469679a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#ZONA 233 NO APAREIX 14-21\n",
+    "set(df_22[df_22[\"ID_FINCA\"].isin(id_finca) == True][\"ID_ZONA\"])- set(df_20_21[\"ID_ZONA\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c8fa5c2",
+   "metadata": {},
+   "source": [
+    "#### Cas 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "id": "968aa612",
    "metadata": {},
    "outputs": [],
@@ -1122,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 74,
    "id": "35e6d0bb",
    "metadata": {},
    "outputs": [],
@@ -1140,259 +1246,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f10ec201",
+   "execution_count": 94,
+   "id": "ee11957a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_22[df_22[\"ID_FINCA\"].isin(id_finca) == True]"
+    "df_22_cas2 = df_22.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f590504c",
+   "execution_count": 95,
+   "id": "dd039c64",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#FINCA 13450 apareix l'any 14\n",
-    "df_new5[df_new5[\"ID_FINCA\"].isin(id_finca) == True]"
+    "df_22_cas2 = df_22_cas2[(df_22_cas2[\"ID_FINCA\"].isin(id_finca) == True) &\n",
+    "                             (df_22_cas2[\"ID_FINCA\"] != \"13450\") &\n",
+    "                             (df_22_cas2[\"ID_ZONA\"] != \"233\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "08fce06d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_22_cas2 = df_22_cas2.drop(columns = [\"ID_FINCA\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "ee8fac90",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_22_cas2.to_csv(\"../DATASETS_FINALS/df_22_cas2.csv\", index_label = \"INDEX\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fa8d8ce",
+   "metadata": {},
+   "source": [
+    "#### Cas 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "e804ec0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_22_cas3 = df_22.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "6173bc60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_22_cas3 = df_22_cas3[df_22_cas3[\"ID_ZONA\"] == \"233\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "4bf33a04",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_22_cas3 = df_22_cas3.drop(columns = [\"ID_FINCA\", \"ID_ZONA\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "b89ca11c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_22_cas3.to_csv(\"../DATASETS_FINALS/df_22_cas3.csv\", index_label = \"INDEX\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69e00a61",
+   "metadata": {},
+   "source": [
+    "#### Cas 4"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "4be132ac",
+   "id": "83665d1a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CAMPAÑA</th>\n",
-       "      <th>ID_FINCA</th>\n",
-       "      <th>ID_ZONA</th>\n",
-       "      <th>ID_ESTACION</th>\n",
-       "      <th>ALTITUD</th>\n",
-       "      <th>VARIEDAD</th>\n",
-       "      <th>MODO</th>\n",
-       "      <th>TIPO</th>\n",
-       "      <th>COLOR</th>\n",
-       "      <th>SUPERFICIE</th>\n",
-       "      <th>PRODUCCION</th>\n",
-       "      <th>ALTITUD_MIN</th>\n",
-       "      <th>ALTITUD_DIF</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>9565</th>\n",
-       "      <td>22</td>\n",
-       "      <td>57052</td>\n",
-       "      <td>233</td>\n",
-       "      <td>9</td>\n",
-       "      <td>440</td>\n",
-       "      <td>87</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3.1000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>440</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9566</th>\n",
-       "      <td>22</td>\n",
-       "      <td>57052</td>\n",
-       "      <td>233</td>\n",
-       "      <td>9</td>\n",
-       "      <td>440</td>\n",
-       "      <td>17</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.8300</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>440</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9567</th>\n",
-       "      <td>22</td>\n",
-       "      <td>57052</td>\n",
-       "      <td>233</td>\n",
-       "      <td>9</td>\n",
-       "      <td>440</td>\n",
-       "      <td>59</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>5.8907</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>440</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     CAMPAÑA ID_FINCA ID_ZONA ID_ESTACION ALTITUD VARIEDAD MODO TIPO COLOR  \\\n",
-       "9565      22    57052     233           9     440       87    1    0     0   \n",
-       "9566      22    57052     233           9     440       17    1    0     1   \n",
-       "9567      22    57052     233           9     440       59    1    0     1   \n",
-       "\n",
-       "      SUPERFICIE  PRODUCCION  ALTITUD_MIN  ALTITUD_DIF  \n",
-       "9565      3.1000         NaN          440            0  \n",
-       "9566      1.8300         NaN          440            0  \n",
-       "9567      5.8907         NaN          440            0  "
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_new5[df_new5[\"ID_ZONA\"].isin(id_zona) == True]"
+    "df_22_cas4 = df_22.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "id": "83788526",
+   "execution_count": 85,
+   "id": "19d2ee38",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'233'}"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#ZONA 233 NO APAREIX 14-21\n",
-    "set(df_22[df_22[\"ID_FINCA\"].isin(id_finca) == True][\"ID_ZONA\"])- set(df_20_21[\"ID_ZONA\"])"
+    "df_22_cas4 = df_22_cas4[df_22_cas4[\"ID_FINCA\"] == \"13450\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "86f9f797",
+   "execution_count": 86,
+   "id": "4ee4da8e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>CAMPAÑA</th>\n",
-       "      <th>ID_FINCA</th>\n",
-       "      <th>ID_ZONA</th>\n",
-       "      <th>ID_ESTACION</th>\n",
-       "      <th>ALTITUD</th>\n",
-       "      <th>VARIEDAD</th>\n",
-       "      <th>MODO</th>\n",
-       "      <th>TIPO</th>\n",
-       "      <th>COLOR</th>\n",
-       "      <th>SUPERFICIE</th>\n",
-       "      <th>PRODUCCION</th>\n",
-       "      <th>ALTITUD_MIN</th>\n",
-       "      <th>ALTITUD_DIF</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>7673</th>\n",
-       "      <td>21</td>\n",
-       "      <td>797</td>\n",
-       "      <td>845</td>\n",
-       "      <td>16</td>\n",
-       "      <td>625-670</td>\n",
-       "      <td>59</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7.5143</td>\n",
-       "      <td>11710.0</td>\n",
-       "      <td>625</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8746</th>\n",
-       "      <td>22</td>\n",
-       "      <td>797</td>\n",
-       "      <td>845</td>\n",
-       "      <td>16</td>\n",
-       "      <td>625-670</td>\n",
-       "      <td>59</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>7.5143</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>625</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     CAMPAÑA ID_FINCA ID_ZONA ID_ESTACION  ALTITUD VARIEDAD MODO TIPO COLOR  \\\n",
-       "7673      21      797     845          16  625-670       59    1    0     1   \n",
-       "8746      22      797     845          16  625-670       59    1    0     1   \n",
-       "\n",
-       "      SUPERFICIE  PRODUCCION  ALTITUD_MIN  ALTITUD_DIF  \n",
-       "7673      7.5143     11710.0          625           45  \n",
-       "8746      7.5143         NaN          625           45  "
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df_new5[df_new5[\"SUPERFICIE\"] == 7.5143]"
+    "df_22_cas4.to_csv(\"../DATASETS_FINALS/df_22_cas4.csv\", index_label = \"INDEX\")"
    ]
   }
  ],
