Gradient boosting parameters update

--- a/PREDICTIONS/join_i_cas4.ipynb
+++ b/PREDICTIONS/join_i_cas4.ipynb
@@ -146,6 +146,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ca229df1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model amb paràmeters que ens han donat millors resultats pel CAS 2!!!\n",
+    "model = GradientBoostingRegressor(\n",
+    "    n_estimators= 100, \n",
+    "    learning_rate = 0.35, \n",
+    "    max_depth = 40, \n",
+    "    min_samples_split = 25,\n",
+    "    min_impurity_decrease = 0.1,\n",
+    "    min_samples_leaf = 30,\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3fd5180f",
    "metadata": {},
    "outputs": [],
@@ -512,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
